--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -13,7 +13,7 @@
         </p>
       </div>
       <div class="about-image">
-        <img ngSrc="/assets/profil1.png" alt="Youssef Rouimi" height="3023" width="2601"/>
+        <img ngSrc="assets/profil1.png" alt="Youssef Rouimi" height="3023" width="2601"/>
       </div>
   </div>
 </section>
