update assets icons and clients

--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -3,6 +3,6 @@
     <img ngSrc="assets/language.png" alt="Photo de Youssef" class="profile-photo" height="962" width="974"/>
     <h1>Youssef Rouimi</h1>
     <p>Développeur Full Stack Java / Angular</p>
-    <a routerLink="/projects" class="cta">Voir mes projets</a>
+    <a routerLink="/experiences" class="cta">Voir mes expériences</a>
   </div>
 </section>
