--- a/src/app/components/skills/skills.html
+++ b/src/app/components/skills/skills.html
@@ -22,11 +22,11 @@
           <span>SQL</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/html5.svg" alt="HTML5" />
+          <img src="assets/icons/html5.png" alt="HTML5" />
           <span>HTML5</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/css3.svg" alt="CSS3" />
+          <img src="assets/icons/css3.png" alt="CSS3" />
           <span>CSS3</span>
         </div>
       </div>
@@ -86,15 +86,15 @@
           <span>Jenkins</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/mysql.svg" alt="MySQL" />
+          <img src="assets/icons/mysql.png" alt="MySQL" />
           <span>MySQL</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/pg.svg" alt="PostgreSQL" />
+          <img src="assets/icons/Postgresql.png" alt="PostgreSQL" />
           <span>PostgreSQL</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/restapi.svg" alt="REST API" />
+          <img src="assets/icons/rest.jpg" alt="REST API" />
           <span>REST API</span>
         </div>
       </div>
