--- a/src/app/components/clients/clients.html
+++ b/src/app/components/clients/clients.html
@@ -3,11 +3,11 @@
     <section id="clients">
       <h2>Ils m'ont fait confiance</h2>
       <div class="logo-grid">
-        <img ngSrc="assets/clients/grtgaz.png" alt="GRTgaz" height="362" width="780"/>
+        <img ngSrc="assets/clients/grt.jpg" alt="GRTgaz" height="362" width="780"/>
         <img ngSrc="assets/clients/abeille.png" alt="Abeille Assurance" height="310" width="870"/>
         <img ngSrc="assets/clients/enedis.png" alt="Enedis" height="176" width="649"/>
         <img ngSrc="assets/clients/viamedis.png" alt="Viamedis" height="283" width="283"/>
-        <img ngSrc="/assets/clients/credit_logement.png" alt="Crédit Logement" height="140" width="220"/>
+        <img ngSrc="/assets/clients/credit.jpg" alt="Crédit Logement" height="140" width="220"/>
       </div>
     </section>
   </div>
