--- a/src/app/components/skills/skills.html
+++ b/src/app/components/skills/skills.html
@@ -48,7 +48,7 @@
           <span>Spring MVC</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/jpa.svg" alt="JPA" />
+          <img src="assets/icons/jpa.png" alt="JPA" />
           <span>JPA / Hibernate</span>
         </div>
         <div class="skill-item">
@@ -56,7 +56,7 @@
           <span>Bootstrap</span>
         </div>
         <div class="skill-item">
-          <img src="assets/icons/angular-material.svg" alt="Angular Material" />
+          <img src="assets/icons/angular.svg" alt="Angular Material" />
           <span>Angular Material</span>
         </div>
       </div>
