--- a/src/app/components/skills/skills.css
+++ b/src/app/components/skills/skills.css
@@ -5,9 +5,12 @@
 
 .skills h2 {
   text-align: center;
-  font-size: 2rem;
-  color: #004080;
-  margin-bottom: 60px;
+  color: #003060;
+  margin-bottom: 50px;
+  font-size: 2.2rem;
+  font-weight: 600;
+  z-index: 2;
+  position: relative;
 }
 
 .skill-category {
@@ -30,7 +33,7 @@
 
 .skill-item {
   flex: 0 1 150px;
-  background-color: #f0f4f8;
+  background-color: lightblue;
   border-radius: 8px;
   padding: 15px;
   text-align: center;
