fix header return

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
   <div class="container">
+    <a class="nav-link" routerLink="/">Youssef R.</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             (click)="toggleMenu()">
       <span class="navbar-toggler-icon"></span>
